# QuickMklink

./: .gitignore  LICENSE  QuickMklink.py  QuickMklink.spec  README.md  README_CN.md  config.json  pyproject.toml
locale/: messages.pot
locale/en_US/LC_MESSAGES/: messages.mo  messages.po
locale/zh_CN/LC_MESSAGES/: messages.mo  messages.po
scripts/: nuitka_build.py  pyinstaller_build.py
src/: config.py  i18n.py  settings.py
src/common/: clipboard_manager.py  context_menu_manager.py  entry.py  symlink_manager.py  tag_parser.py
src/core/: paths.py
src/dialog/: message_dialog.py
src/exceptions/: exception_file.py  exception_tag.py
src/models/: model_main.py
src/presenters/: presenter_main.py
src/utils/: clipboard.py  config_base.py  context_menu.py  file_controller.py  permission.py  singleton.py  system.py
src/views/: view_main.py
