[project]
name = "quickmklink"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "PythonImporter", email = "271374667@qq.com" }
]
dependencies = [
    "typing-extensions>=4.12.2",
    "loguru>=0.7.2",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/quickmklink"]
